# openweather_fastapi

./: Dockerfile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml  setup.cfg
.github/workflows/: main.yml
weather_api/: __main__.py  config.py  database.py  database_psyco.py  depends.py  models.py  schemas.py  server.py  test_main.py
weather_api/clients/: openweather.py  weather.py  weatherbit.py  weatherstack.py
weather_api/repos/weather/: database.py  database_psyco.py  repo.py
weather_api/services/: weather.py
